sites/all/themes/atwork_zen/sass/base/_typography.scss
/* Site wide font settings */
/* Updated October 2018 */
// BC Sans Fonts


@font-face {
    src: url('../fonts/BCSans-Regular.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-family: 'BCSans';
}
@font-face {
    src: url('../fonts/BCSans-BoldItalic.woff') format('woff');
    font-weight: 700;
    font-style: italic;
    font-family: 'BCSans';
}
@font-face {
    src: url('../fonts/BCSans-Italic.woff') format('woff');
    font-weight: 400;
    font-style: italic;
    font-family: 'BCSans';
}
@font-face {
    src: url('../fonts/BCSans-Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-family: 'BCSans';
}

/* Address `outline` inconsistency between Chrome and other browsers. */
a:focus {
  outline: thin dotted;
}

/* Improve readability when focused and also mouse hovered in all browsers. */
a:active,
a:hover {
  outline: 0;
}

/**
 * Typography
 *
 * To achieve a pleasant vertical rhythm, we use Compass' Vertical Rhythm mixins
 * so that the line height of our base font becomes the basic unit of vertical
 * measurement. We use multiples of that unit to set the top and bottom margins
 * for our block level elements and to set the line heights of any fonts.
 * For more information, see http://24ways.org/2006/compose-to-a-vertical-rhythm
 */

/* Set 1 unit of vertical rhythm on the top and bottom margin. */
blockquote {
  /* Also indent the quote on both sides. */
  margin: 1.5em 30px;
}

html, body  {
    font-family: 'BCSans';
    font-size: .9rem;
    line-height: 1.5;
    -ms-text-size-adjust: 100%;     /* 2 */
    -webkit-text-size-adjust: 100%; /* 2 */
    p {
        color: $text;
        padding:0;
    }
}

input,
button,
select,
optgroup,
textarea {
  margin: 0;
  font-family: 'BCSans'!important;
  font-size: inherit;
  line-height: inherit;
}

// Heading Tags / Sizes
h1 {
    font-family: 'BCSans';
    //@include size2136;
    color: $text;
      /* Set the font-size and line-height while keeping a proper vertical rhythm. */
    font-size: 1.8em;
    line-height: 1.5em; /* 3rem / 2em = 1.5em */
    /* Set 1 unit of vertical rhythm on the top and bottom margins. */
    margin-top: 0.75em; /* 1.5rem / 2em = .75em */
    margin-bottom: 0.75em;
}
h2, h3, h4 {
  font-family: 'BCSans';
  font-weight:600;
  color: $text;
  padding-bottom:20px;
  margin:0;
}
h2 {
  font-size: 1.3em;
  line-height: 2em; /* 3rem / 1.5em = 2em */
  margin-top: 1em; /* 1.5rem / 1.5em = 1em */
  margin-bottom: 1em;
}
h3 {
  font-size: 1.15em;
  line-height: 1.28205em; /* 1.5rem / 1.17em = 1.28205em */
  margin-top: 1.28205em;
  margin-bottom: 1.8205em;
}
h4 {
  font-size: 1em;
  line-height: 1.5em; /* 1.5rem / 1em = 1.5em */
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}
h5 {
  font-family: 'BCSans';
  font-size: 0.83em;
  line-height: 1.80723em; /* 1.5rem / 0.83em = 1.80723em */
  margin-top: 1.80723em;
  margin-bottom: 1.80723em;
}

// H6 tags are mainly used in Comment titles and headings. See _atwork-mixins.scss for H6 style
h6 {
  font-family: 'BCSans';
  font-weight: bold;
  font-size: 0.67em;
  line-height: 2.23881em; /* 1.5rem / 0.67em = 2.23881em */
  margin-top: 2.23881em;
  margin-bottom: 2.23881em;
  text-transform: uppercase;
}
// Global text links
a { // initial link state
    color: $link-blue;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
}


/* Address styling not present in IE 8/9, Safari 5, and Chrome. */
abbr[title] {
  border-bottom: 1px dotted;
}

/* Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome. */
b,
strong {
  font-weight: bold;
}

/* Address styling not present in Safari 5 and Chrome. */
dfn {
  font-style: italic;
}

/* Address differences between Firefox and other browsers. */
hr {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0;
  border: 1px solid #666;
  padding-bottom: -1px;
  margin: 1.5em 0;
}

/* Address styling not present in IE 8/9. */
mark {
  background: #ff0;
  color: #000;
}

/* Correct font family set oddly in Safari 5 and Chrome. */
code,
kbd,
pre,
samp,
tt,
var {
  font-family: 'BCSans';
  font-size: 1em;
  line-height: 1.5em;
}

/* Labels / Form titles & headers -------------------------------------------------------*/
label {
  font-weight: normal !important;
}


/* Top Tools / Front Page Advanced Search / FP Key Initiatives */
#header .view-top-tools.view-id-top_tools p,
#edit-advanced-search,
#edit-advanced.search-advanced,
#block-block-5 .jcarousel span.ki-title,
.front #tabs .ui-tabs-nav a,
.user-link-desc,
#block-boxes-front-ad-space,
.field-name-field-tags,
#block-atwork-activity-homepage,
.front #block-views-home-page-blocks-zen-block-2,
article.node-tools #node-tools,
.comments header p.submitted,
.node-type-article .comment header p.submitted,
.node-type-forum .comment header p.submitted,
.node-type-blog p.submitted,
.poll .poll-already-voted,
.commentLinks,
.logged-in.two-sidebars.page-node.two-sidebars #group-activity-ajax {
  font-size:.9em;
}

/* --------------------------------------------------------------- Typography */
h1, h2, h3, h4, h5, h6 {
  word-wrap: break-word;
  -webkit-text-size-adjust: none;
  -ms-text-size-adjust: none;
}

